changedetection/changedetection-middleware-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: changedetection-middleware-headers
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Prefix: "/changedetection"
