changedetection/changedetection-middleware-strip.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: changedetection-middleware
spec:
  stripPrefix:
    prefixes:
      - /changedetection
