changedetection/changedetection-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: changedetection-middleware
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Prefix: "/changedetection"
  stripPrefix:
    prefixes:
      - /changedetection
