changedetection/changedetection-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: changedetection-deployment
  labels:
    app: changedetection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: changedetection
  template:
    metadata:
      labels:
        app: changedetection
    spec:
      serviceAccountName: ""
      containers:
        - name: changedetection
          image: ghcr.io/dgtlmoon/changedetection.io:latest
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - mountPath: /datastore
              name: datastore
      volumes:
        - name: datastore
          persistentVolumeClaim:
            claimName: changedetection-pvc
