changedetection/ddnsupdater-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: changedetection-deployment
  labels:
    app: changedetection
spec:
  selector:
    matchLabels:
      app: changedetection
  template:
    metadata:
      labels:
        app: changedetection
    spec:
      containers:
        - name: changedetection
          image: ghcr.io/dgtlmoon/changedetection.io:latest
          ports:
            - containerPort: 8000
