changedetection/changedetection-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: changedetection-service
spec:
  selector:
    app: changedetection
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8000
